--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Portfolio App</string>
+    <string name="my_name">Onuoha Godfirst Chibuzo</string>
+    <string name="my_work">Mobile Developer</string>
+    <string name="my_interest">I\'m passionate about developing innovative products and I also like music.</string>
+    <string name="e_mail">E-mail</string>
+    <string name="github">GitHub</string>
+    <string name="twitter">Twitter</string>
+    <string name="facebook">Facebook</string>
+    <string name="linkedin">LinkedIn</string>
+    <string name="instagram">Instagram</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="android">Android</string>
+    <string name="website">Website</string>
+    <string name="contact">Contact</string>
+    <string name="medium">Medium</string>
+    <string name="bitbucket">BitBucket</string>
+    <string name="stackoverflow">StackOverflow</string>
 </resources>
